--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
- 
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <html lang="en-CA">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <!--code taken from: https://www.w3schools.com/cssref/sel_target.php 
-                        https://www.w3schools.com/css/default.asp#gsc.tab=0-->
+  <!--code copied from: https://www.w3schools.com/cssref/sel_target.php 
+         Author: w3schools.com
+Name: CSS target
+Date retrieved: Nov 30, 2023
+-->
     
 <body>
 <head>
@@ -71,7 +73,7 @@
   }
 
 #Home {
- background-color: #248277;
+ background-color: #20B2AA;
   color: white;
     padding: 10px 50px;
 
@@ -84,7 +86,7 @@
     display: none;
   }
   
- 
+ /* Copied code starts */
   #Link:target { 
   display: block; 
 } 
@@ -97,6 +99,7 @@
  #Home:target { 
   display: block; 
 } 
+  /* Copied code ends */
   </style>
 </head>
   
@@ -121,6 +124,7 @@
        <li><a href="#Must-Watch" > Must-Watch</a></li>
        <li><a href="#Link">Link</a></li>
     </ul>
+   <p>For more information feel free to contact me through <a href="mailto:ssumesh@uwaterloo.ca"><i>my email.</i></a></p>
    </p>
 </div>
 
